// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputText default 1`] = `
.c0 {
  border: 1px solid;
  border-color: #DEE1E5;
  border-radius: 4px;
  display: inline-block;
  height: 36px;
  width: 100%;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:focus,
.c0:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c0:disabled {
  background: #F5F6F7;
  color: #939BA5;
}

.c0:disabled:hover {
  border-color: #DEE1E5;
}

.c1 {
  border-radius: 0.25rem;
  height: 36px;
  width: 174px;
  padding-left: 0rem;
  padding-right: 0rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  padding: 0 8px;
  font-size: 0.875rem;
  color: #343C42;
}

<input
  className="c0 c1"
  type="text"
/>
`;

exports[`InputText should accept disabled 1`] = `
.c0 {
  border: 1px solid;
  border-color: #DEE1E5;
  border-radius: 4px;
  display: inline-block;
  height: 36px;
  width: 100%;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:focus,
.c0:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c0:disabled {
  background: #F5F6F7;
  color: #939BA5;
}

.c0:disabled:hover {
  border-color: #DEE1E5;
}

.c1 {
  border-radius: 0.25rem;
  height: 36px;
  width: 174px;
  padding-left: 0rem;
  padding-right: 0rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  padding: 0 8px;
  font-size: 0.875rem;
  color: #343C42;
}

<input
  className="c0 c1"
  disabled={true}
  type="text"
/>
`;

exports[`InputText should accept readOnly 1`] = `
.c0 {
  border: 1px solid;
  border-color: #DEE1E5;
  border-radius: 4px;
  display: inline-block;
  height: 36px;
  width: 100%;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:focus,
.c0:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c0:disabled {
  background: #F5F6F7;
  color: #939BA5;
}

.c0:disabled:hover {
  border-color: #DEE1E5;
}

.c1 {
  border-radius: 0.25rem;
  height: 36px;
  width: 174px;
  padding-left: 0rem;
  padding-right: 0rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  padding: 0 8px;
  font-size: 0.875rem;
  color: #343C42;
}

<input
  className="c0 c1"
  readOnly={true}
  type="text"
/>
`;

exports[`InputText should accept required 1`] = `
.c0 {
  border: 1px solid;
  border-color: #DEE1E5;
  border-radius: 4px;
  display: inline-block;
  height: 36px;
  width: 100%;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:focus,
.c0:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c0:disabled {
  background: #F5F6F7;
  color: #939BA5;
}

.c0:disabled:hover {
  border-color: #DEE1E5;
}

.c1 {
  border-radius: 0.25rem;
  height: 36px;
  width: 174px;
  padding-left: 0rem;
  padding-right: 0rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  padding: 0 8px;
  font-size: 0.875rem;
  color: #343C42;
}

<input
  className="c0 c1"
  required={true}
  type="text"
/>
`;

exports[`InputText with a placeholder 1`] = `
.c0 {
  border: 1px solid;
  border-color: #DEE1E5;
  border-radius: 4px;
  display: inline-block;
  height: 36px;
  width: 100%;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:focus,
.c0:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c0:disabled {
  background: #F5F6F7;
  color: #939BA5;
}

.c0:disabled:hover {
  border-color: #DEE1E5;
}

.c1 {
  border-radius: 0.25rem;
  height: 36px;
  width: 174px;
  padding-left: 0rem;
  padding-right: 0rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  padding: 0 8px;
  font-size: 0.875rem;
  color: #343C42;
}

<input
  className="c0 c1"
  placeholder="I am a placeholder"
  type="text"
/>
`;

exports[`InputText with a value 1`] = `
.c0 {
  border: 1px solid;
  border-color: #DEE1E5;
  border-radius: 4px;
  display: inline-block;
  height: 36px;
  width: 100%;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:focus,
.c0:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c0:disabled {
  background: #F5F6F7;
  color: #939BA5;
}

.c0:disabled:hover {
  border-color: #DEE1E5;
}

.c1 {
  border-radius: 0.25rem;
  height: 36px;
  width: 174px;
  padding-left: 0rem;
  padding-right: 0rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  padding: 0 8px;
  font-size: 0.875rem;
  color: #343C42;
}

<input
  className="c0 c1"
  type="text"
  value="Some value"
/>
`;

exports[`InputText with an error validation 1`] = `
.c0 {
  border: 1px solid;
  border-color: #DEE1E5;
  border-radius: 4px;
  display: inline-block;
  height: 36px;
  width: 100%;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:focus,
.c0:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c0:disabled {
  background: #F5F6F7;
  color: #939BA5;
}

.c0:disabled:hover {
  border-color: #DEE1E5;
}

.c1 {
  border-radius: 0.25rem;
  height: 36px;
  width: 174px;
  padding-left: 0rem;
  padding-right: 0rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  padding: 0 8px;
  font-size: 0.875rem;
  color: #343C42;
  border-color: #ED3B53;
}

.c1:hover {
  border-color: #CC1F36;
}

.c1:focus,
.c1:focus-within {
  border-color: #CC1F36;
  box-shadow: 0 0 0 2px #FFE5E9;
}

<input
  className="c0 c1"
  type="text"
/>
`;

exports[`InputText with aria-describedby 1`] = `
.c0 {
  border: 1px solid;
  border-color: #DEE1E5;
  border-radius: 4px;
  display: inline-block;
  height: 36px;
  width: 100%;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:focus,
.c0:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c0:disabled {
  background: #F5F6F7;
  color: #939BA5;
}

.c0:disabled:hover {
  border-color: #DEE1E5;
}

.c1 {
  border-radius: 0.25rem;
  height: 36px;
  width: 174px;
  padding-left: 0rem;
  padding-right: 0rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  padding: 0 8px;
  font-size: 0.875rem;
  color: #343C42;
}

<input
  aria-describedby="some-id"
  className="c0 c1"
  type="text"
/>
`;

exports[`InputText with name and id 1`] = `
.c0 {
  border: 1px solid;
  border-color: #DEE1E5;
  border-radius: 4px;
  display: inline-block;
  height: 36px;
  width: 100%;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:focus,
.c0:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c0:disabled {
  background: #F5F6F7;
  color: #939BA5;
}

.c0:disabled:hover {
  border-color: #DEE1E5;
}

.c1 {
  border-radius: 0.25rem;
  height: 36px;
  width: 174px;
  padding-left: 0rem;
  padding-right: 0rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  padding: 0 8px;
  font-size: 0.875rem;
  color: #343C42;
}

<input
  className="c0 c1"
  id="Bobby"
  name="Bob"
  type="text"
/>
`;
